5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1593_1804.log
== TEST (2019-03-28 10:49:46) 
-- CODE:
x1 = float(input("insira a coordenada de x1:"))
y1 = float(input("insira a coordenada de y1:"))
x2 = float(input("insira a coordenada de x2:"))
y2 = float(input("insira a coordenada de y2:"))

dab1 = (x2 - x1)**2
dab2 = (y2 - y1)**2
dt = (dab1 + dab2)**0.5
print(dt)
-- OUTPUT:
30.479501308256342
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:50:33) 
-- CODE:
x1 = float(input("insira a coordenada de x1:"))
y1 = float(input("insira a coordenada de y1:"))
x2 = float(input("insira a coordenada de x2:"))
y2 = float(input("insira a coordenada de y2:"))

dab1 = (x2 - x1)**2
dab2 = (y2 - y1)**2
dt = (dab1 + dab2)**0.5
print(round(dt,3)
-- ERROR:
File "XXXX", line 10
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:50:44) 
-- CODE:
x1 = float(input("insira a coordenada de x1:"))
y1 = float(input("insira a coordenada de y1:"))
x2 = float(input("insira a coordenada de x2:"))
y2 = float(input("insira a coordenada de y2:"))

dab1 = (x2 - x1)**2
dab2 = (y2 - y1)**2
dt = (dab1 + dab2)**0.5
print(round(dt,3))
-- EXECUTION TIME:
0.16597
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.48
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
3.14
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:35:41) 
-- CODE:
x1 = float(input("insira a coordenada de x1:"))
y1 = float(input("insira a coordenada de y1:"))
x2 = float(input("insira a coordenada de x2:"))
y2 = float(input("insira a coordenada de y2:"))

dx = (x2 - x1)**2
dy = (y2 - y1)**2

dab = (dx + dy)**0.5
print(dab)
-- OUTPUT:
30.479501308256342
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:36:23) 
-- CODE:
x1 = float(input("insira a coordenada de x1:"))
y1 = float(input("insira a coordenada de y1:"))
x2 = float(input("insira a coordenada de x2:"))
y2 = float(input("insira a coordenada de y2:"))

dx = (x2 - x1)**2
dy = (y2 - y1)**2

dab = (dx + dy)**0.5
print(round(dab,3))
-- OUTPUT:
30.48
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 20:36:34) 
-- CODE:
x1 = float(input("insira a coordenada de x1:"))
y1 = float(input("insira a coordenada de y1:"))
x2 = float(input("insira a coordenada de x2:"))
y2 = float(input("insira a coordenada de y2:"))

dx = (x2 - x1)**2
dy = (y2 - y1)**2

dab = (dx + dy)**0.5
print(round(dab,3))
-- EXECUTION TIME:
0.17782
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.48
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
3.14
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
